# Micro-State

./: .gitignore  README.md  pyproject.toml
examples/: README.md  example_utils.py  super_mario.py  super_mario_intermediate.py  super_mario_long.py  super_mario_short.py
microstate/: __init__.py  state_machine.py
tests/: test_all.py  test_microstate.py  tests.py
